--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ flutter:
         pluginClass: UnrarFilePlugin
       ios:
         pluginClass: UnrarFilePlugin
+      macos:
+        pluginClass: UnrarFilePlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
